--- a/masud/index.html
+++ b/masud/index.html
@@ -3,9 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>firstc0prodject</title>
+    <link rel="stylesheet" href="style.css">
+    <title>pr0oject\</title>
 </head>
 <body>
-    <h1>amar sonar bangla/h1>
+    <h1>anfar sibear bakb]\</h1>
+    <h2>amafala;lkdsa</h2>
+
 </body>
 </html>
